--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -165,18 +165,21 @@ body.loading .overlay{
 				<!--Title End-->
 				<!--Row start-->
 				<div class="row">
-					<div th:if="${error != null}">
-						<div class="alert alert-error">
-							<a class="close" data-dismiss="alert">×</a> <label for="${error}"
-								th:text="${error}"></label>
+					<div class="col-md-12">
+						<div th:if="${error != null}">
+							<div class="alert alert-error">
+								<a class="close" data-dismiss="alert">×</a> <p for="${error}"
+									th:text="${error}"></p>
+							</div>
+						</div>
+						<div th:if="${message != null}">
+							<div class="alert alert-error">
+								<a class="close" data-dismiss="alert">×</a> <p
+									for="${message}" th:text="${message}"></p>
+							</div>
 						</div>
 					</div>
-					<div th:if="${message != null}">
-						<div class="alert alert-error">
-							<a class="close" data-dismiss="alert">×</a> <label
-								for="${message}" th:text="${message}"></label>
-						</div>
-					</div>
+
 				</div>
 
 				<form  id="reportsform" action="#"
@@ -203,10 +206,9 @@ body.loading .overlay{
 						<div class="col-md-1">&nbsp;</div>
 						<div style="display: none" id="docList">
 							<div class="col-md-4">
-								<label for="doc"><b>DOC:</b>
+								<label><b>DOC:</b>
 									<select size="1"
-										id="doc" name="doc" class="docList" style="width: 100%"
-										th:required="required">
+										id="doc" name="doc" class="docList" style="width: 100%" placeholder="--Select DOCC--">
 											<option></option>
 											<option value="All" th:if="${canSeeAllDocs}" th:selected="${reportRequest.getDoc() == 'All'}">All</option>
 											<option
@@ -238,10 +240,9 @@ body.loading .overlay{
 						</div>
 						<div style="display: none" id="basepathList">
 							<div class="col-md-4">
-								<label><b>Base Path:</b></label>
+								<label for="basepathList"><b>Base Path:</b></label>
 								<select size="1"
-									id="basepath" name="basepath" class="basepathList" style="width: 75%"
-									th:required="required">
+									id="basepath" name="basepath" class="basepathList" style="width: 75%">
 										<option></option>
 										<option value="All" th:if="${canSeeAllDocs}" th:selected="${reportRequest.getBasepath() == 'All'}">All</option>
 										<option
@@ -660,14 +661,14 @@ body.loading .overlay{
 
 
   // Spinner for Ajax
-  $(document).on({
-      ajaxStart: function(){
-      $("body").addClass("loading");
-    },
-      ajaxStop: function(){
-      $("body").removeClass("loading");
-    }
-  });
+	$(document).on({
+		ajaxStart: function(){
+		$("body").addClass("loading");
+		},
+		ajaxStop: function(){
+		$("body").removeClass("loading");
+		}
+	});
 
 	$(document).ready(function(){
 		$('#sub-menu-reports').addClass("active");
@@ -676,12 +677,11 @@ body.loading .overlay{
 			dropdownAutoWidth: true,
 			placeholder: '-----------------Select User-----------------'
 		});
-		$(".docList").select2({
-			placeholder: "--Select DOC--",
+		$('.docList').select2({
 		});
-		$(".basepathList").select2({
-			placeholder: "----------Select Base Path----------",
+		$('.basepathList').select2({
 		});
+
 	});
 		
   $('#fromDate').datepicker({
@@ -862,7 +862,7 @@ body.loading .overlay{
 		}
 		else if(reportType == "USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE"){
 			document.getElementById("user").value = "-1";
-			if(document.getElementById("doc").value == "-1"){
+			if(document.getElementById("doc").value == "" || document.getElementById("doc").value == "-1"){
 				alert("Please select a DOC");
 				return false;
 			}
@@ -877,7 +877,7 @@ body.loading .overlay{
 		else if(reportType == "USAGE_SUMMARY_BY_BASEPATH_BY_DATE_RANGE"){
 			document.getElementById("doc").value = "-1";
 			document.getElementById("user").value = "-1";
-			if(document.getElementById("basepath").value == "-1"){
+			if(document.getElementById("basepath").value == "" || document.getElementById("basepath").value == "-1"){
 				alert("Please select a Base path");
 				return false;
 			}
