--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -154,15 +154,6 @@ body.loading .overlay{
 		<!--main content start-->
 		<section id="main-content">
 			<section class="wrapper">
-				<!--Title start-->
-				<div class="row">
-					<div class="col-lg-12">
-						<h4>
-							<i class="fa fa-list-alt"></i> Reports
-						</h4>
-					</div>
-				</div>
-				<!--Title End-->
 				<!--Row start-->
 				<div class="row">
 					<div class="col-md-12">
@@ -188,12 +179,10 @@ body.loading .overlay{
 					
 					<!-- First Row Begin -->
 					<div class="row">
-						<div class="col-md-2">
-							<label><b>Report Type:</b></label>
+						<div class="col-sm-3"><label><b>Report Type:</b></label>
 							<select name="reportType" id="reportType" class="form-control"
 								onchange="show(this.value)">
 								<option value="-1">---Select Report Type---</option>
-
 								<option value="USAGE_SUMMARY_BY_BASEPATH_BY_DATE_RANGE" th:selected="${reportRequest.getReportType() == 'USAGE_SUMMARY_BY_BASEPATH_BY_DATE_RANGE'}">Base Path Report</option>
 								<option value="USAGE_SUMMARY_BY_PATH_BY_DATE_RANGE" th:selected="${reportRequest.getReportType() == 'USAGE_SUMMARY_BY_PATH_BY_DATE_RANGE'}">Collection Path Report</option>
 								<option value="USAGE_SUMMARY_BY_DATA_OWNER" th:selected="${reportRequest.getReportType() == 'USAGE_SUMMARY_BY_DATA_OWNER'}">Data Owner Report</option>
@@ -202,13 +191,14 @@ body.loading .overlay{
 									th:if="${userRole == 'SYSTEM_ADMIN'}" th:selected="${reportRequest.getReportType() == 'USAGE_SUMMARY_BY_DATE_RANGE'}">Summary Report</option>
 								<option value="USAGE_SUMMARY_BY_USER_BY_DATE_RANGE" th:selected="${reportRequest.getReportType() == 'USAGE_SUMMARY_BY_USER_BY_DATE_RANGE'}">User Report</option>								
 							</select>
+							<div class="col-sm-2"></div>
 						</div>
-						<div class="col-md-1">&nbsp;</div>
-						<div style="display: none" id="docList">
-							<div class="col-md-4">
-								<label><b>DOC:</b>
+						<!---  DOC List Begin -->
+						<div style="display: none" id="docList" >
+							<div class="col-sm-2">
+								<label><b>DOC:</b></label>
 									<select size="1"
-										id="doc" name="doc" class="docList" style="width: 100%" placeholder="--Select DOCC--">
+										id="doc" name="doc" class="docList" style="width: 100%">
 											<option></option>
 											<option value="All" th:if="${canSeeAllDocs}" th:selected="${reportRequest.getDoc() == 'All'}">All</option>
 											<option
@@ -217,14 +207,14 @@ body.loading .overlay{
 												th:selected="${reportRequest.getDoc() == entry}">
 												Wireframe</option>
 									</select>
-								</label>
 							</div>
-							<div class="col-md-5">&nbsp;&nbsp;</div>
+							<div class="col-sm-4"></div>
 						</div>
-						
+						<!---  DOC List End -->
+						<!---  User List Begin -->
 						<div style="display: none" id="userList">
-							<div class="col-md-4">
-								<label for="user"><b>Users:</b>
+							<div class="col-sm-4">
+								<label><b>Users:</b> </label>
 								<select size="1"
 									id="user" name="user" class="userSelect" style="width: 100%">
 										<option></option>
@@ -234,17 +224,17 @@ body.loading .overlay{
 											th:selected="${reportRequest.getUser() == entry.getUserId()}">
 											Wireframe</option>
 								</select>
-								</label>
 							</div>
-							<div class="col-md-5">&nbsp;</div>
 						</div>
+						<!---  User List End -->
+						<!---  BasePath List Begin -->
 						<div style="display: none" id="basepathList">
-							<div class="col-md-4">
+							<div class="col-sm-4">
 								<label for="basepathList"><b>Base Path:</b></label>
 								<select size="1"
-									id="basepath" name="basepath" class="basepathList" style="width: 75%">
+									id="basepath" name="basepath" class="basepathList" style="width: 100%">
 										<option></option>
-										<option value="All" th:if="${canSeeAllDocs}" th:selected="${reportRequest.getBasepath() == 'All'}">All</option>
+										<option value="All" th:if="${canSeeAllDocs}" th:selected="${reportRequest.getBasepath() == 'All'}">All&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
 										<option
 											th:each="entry : ${basepaths}"
 											th:value="${entry}" th:text="${entry}" 
@@ -252,19 +242,17 @@ body.loading .overlay{
 											Wireframe</option>
 								</select>
 							</div>
-							<div class="col-md-5">&nbsp;&nbsp;</div>
 						</div>
+						<!---  BasePath List End -->
+						<!---  Collection Path Begin -->
 						<div style="display: none" id="collectionPath">
-							<div class="col-6 col-md-7">
+							<div class="col-sm-6">
 								<label><b>Collection Path:</b></label>
 								<input type="text" name="path" id="id_collection_path" class="form-control" th:value="${reportRequest.getPath()}" size="75"/>
 							</div>
-							<div class="col-6 col-md-2">&nbsp;&nbsp;</div>
 						</div>
+						<!---  Collection Path End -->
 					</div> <!-- First Row End -->
-					<div class="row">
-						<div class="col-md-12">&nbsp;</div>
-					</div>			
 					<!-- Second Row Begin -->
 					<div class="row">			
 						<div style="display: none" id="fromDateDiv" class="item">
@@ -504,7 +492,7 @@ body.loading .overlay{
 		var noSortColumns = [-1];
 		var visibleColumns = [1];
 		const d = new Date();
-		let pretag = "NCI_DME_";
+		let pretag = "DME_";
 		let tag = `_${(new Date().toJSON().slice(0,10))}`;
 		var colDefs = [];
 		var exportOptions = {};
@@ -571,7 +559,12 @@ body.loading .overlay{
 
 		var fromDate = document.getElementById("fromDate").value;
 		var toDate = document.getElementById("toDate").value;
-		var messageTopDateRange = reportHeaderTitle + "  (Date Range: " +  fromDate + "-" + toDate + ")";
+		var messageTopDateRange = "";
+		if(reportType == "USAGE_SUMMARY_BY_DATA_OWNER") {
+			messageTopDateRange = reportHeaderTitle;
+		} else {
+			messageTopDateRange = reportHeaderTitle + "  (Date Range: " +  fromDate + "-" + toDate + ")";
+		}
 	    var table = $('#' + 'reportgrid').DataTable( {
 				responsive: true,
 				dom: 'Blfrtip',
@@ -673,13 +666,13 @@ body.loading .overlay{
 	$(document).ready(function(){
 		$('#sub-menu-reports').addClass("active");
 		$('.userSelect').select2({
-			width: 'auto',
-			dropdownAutoWidth: true,
 			placeholder: '-----------------Select User-----------------'
 		});
 		$('.docList').select2({
+			placeholder: '-------Select DOC-------'
 		});
 		$('.basepathList').select2({
+			placeholder: '-----------------Select Base Path-----------------'
 		});
 
 	});
