HPCDATAMGM-1701: Change icon for the Manage tab and its child pages

--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -180,7 +180,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-share-alt"></i> Download Tasks
+							<i class="fa fa-gear"></i> Download Tasks
 						</h4>
 					</div>
 				</div>
