--- a/src/hpc-web/src/main/resources/templates/header.html
+++ b/src/hpc-web/src/main/resources/templates/header.html
@@ -92,8 +92,8 @@
 						<li id="sub-menu-browse" class="sub-menu"><a th:href="@{/browse?base}" class=""> <i
 								class="icon_folder"></i> <span>Browse</span>
 						</a></li>
-						<li id="sub-menu-manage" class="sub-menu"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i
-								class="social_share"></i> <span>Manage</span> <span
+						<li id="sub-menu-manage" class="sub-menu"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+								<i class="fa fa-gear" style="color:white; padding-right:2px;"></i><span>Manage</span> <span
 								class="menu-arrow arrow_carrot-right"></span>
 						</a>
 							<ul class="sub dropdown-menu" aria-labelledby="manage_dropdown">
