--- a/src/hpc-web/src/main/resources/templates/subscribenotifications.html
+++ b/src/hpc-web/src/main/resources/templates/subscribenotifications.html
@@ -72,7 +72,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-share-alt"></i> Subscribe Notifications
+							<i class="fa fa-gear"></i> Subscribe Notifications
 						</h4>
 					</div>
 				</div>
