HPCDATAMGM-1660: Removed the text Report from exported file name in Data owner report

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -529,7 +529,7 @@ body.loading .overlay{
 				showHideCols = [':nth-child(n+3)']; // Exclude first two columns from show/hide. It starts from 3rd column
 				break;
 			case 'USAGE_SUMMARY_BY_DATA_OWNER':
-				exportFileName= pretag + "Data_Owner_Report" + tag;
+				exportFileName= pretag + "Data_Owner" + tag;
 				reportHeaderTitle = "DME Data Owner Report";
 				colDefs = [
 						{ "data": "index",   "targets": 0, "searchable": false, "orderable": false, "visible": true},
