--- a/src/hpc-web/src/main/resources/templates/review.html
+++ b/src/hpc-web/src/main/resources/templates/review.html
@@ -72,7 +72,7 @@ table.dataTable tbody td {
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-dashboard"></i> Manage Review
+							<i class="fa fa-dashboard"></i> Review
 						</h4>
 					</div>
 				</div>
