--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -172,7 +172,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-gear"></i> Manage Registration Tasks
+							<i class="fa fa-gear"></i> Registration Tasks
 						</h4>
 					</div>
 				</div>
