--- a/src/hpc-web/src/main/resources/templates/header.html
+++ b/src/hpc-web/src/main/resources/templates/header.html
@@ -8,59 +8,14 @@
 			<!--logo start-->
 			<div class="col order-first" style="background-color: #fff;">
 				<a href="#" aria-label="image link"> <img
-					src="/img/nci_logo.png" class="logoImg"
+					src="/img/DME-1-color-logo.svg" class="logoImg"
 					alt="National Cancer Institute"/></a>
 			</div>
-			<nav class="navbar navbar-default" id="appnavbar">
-			  <div id="toolTitle" class="container-fluid">
-			  	<div class="navbar-header">
-					<span class="navbar-toggler-icon"></span>
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#appNav" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					</button>
-				  <a th:href="@{/}" >Data Management Environment</a>
-				</div>
-				<div id="appNav" class="col-sm-6 col-md-7 col-lg-5 pull-right collapse navbar-collapse">
-				<ul class="nav navbar-nav top-menu top-nav">
-				<!-- user login dropdown start-->
-
-					<li class="nav-item" role="tab"><a data-toggle="dropdown"
-					class="dropdown-toggle" href="#"><i class="icon_profile"></i><span
-						class="username"
-						th:text="${session.hpcUser.firstName +' '+ session.hpcUser.lastName}"></span></a>
-					<ul class="dropdown-menu extended logout">
-						<div class="log-arrow-up"></div>
-						<li class="eborder-top"><a href="/profile"><i class="icon_profile"></i> My Profile</a></li>
-						<li><a href="/logout"><i class="icon_arrow_triangle_right_alt"></i> Log Out</a></li>
-					</ul></li>
-
-					<!--Users Guide-->
-					<li class="nav-item" role="tab"><a data-toggle="dropdown"
-					class="dropdown-toggle" href="#"><i class="icon_book_alt"></i><span
-						class="topNav-item">Help</span></a>
-					<ul class="dropdown-menu extended logout">
-						<div class="log-arrow-up"></div>
-						<li class="eborder-top"><a href="https://wiki.nci.nih.gov/display/DMEdoc" target="_blank"><i class="icon_book_alt"></i> User Guide</a></li>
-						<li><a href="https://github.com/CBIIT/HPC_DME_APIs" target="_blank"><i class="icon_key_alt"></i> DME Site on GitHub</a></li>
-					</ul></li>
-					
-					<li class="nav-item versionNumber"><a href="">
-						<span th:if="${session.env == 'Local' or session.env == 'DEV' or session.env == 'UAT'}" th:text="'version: '+${session.version}+' ('+${session.env}+')'"></span>
-						<span th:if="${session.env == 'PROD'}" th:text="'version: '+${session.version}"></span>
-						</a></li>
-				<!-- user login dropdown end -->
-				</ul>
-				</div>
-			</div>
-			</nav>
 			<!--logo end-->
 
 
 		<!--navbar start-->
-		<nav class="navbar navbar-default pull-left" id="menunavbar">
+		<nav class="navbar navbar-default" id="menunavbar">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<span class="navbar-toggler-icon"></span>
@@ -73,11 +28,11 @@
 				</div>
 				<div id="topNav" class="collapse navbar-collapse">
 					<!-- navbar menu start-->
-					<ul class="nav navbar-nav">
+					<div class="pull-left"> <ul class="nav navbar-nav">
 						<li id="sub-menu-dashboard" class="sub-menu"><a class="" th:href="@{/dashboard}"> <i
 								class="icon_house_alt"></i> <span>Dashboard</span>
 						</a></li>
-						<li id="sub-menu-register" class="sub-menu"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i
+						<li id="sub-menu-register" class="sub-menu"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i
 								class="icon_document_alt"></i> <span>Register</span> <span
 								class="menu-arrow arrow_carrot-right"></span>
 						</a>
@@ -92,7 +47,7 @@
 						<li id="sub-menu-browse" class="sub-menu"><a th:href="@{/browse?base}" class=""> <i
 								class="icon_folder"></i> <span>Browse</span>
 						</a></li>
-						<li id="sub-menu-manage" class="sub-menu"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+						<li id="sub-menu-manage" class="sub-menu"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 								<i class="fa fa-gear" style="color:white; padding-right:2px;"></i><span>Manage</span> <span
 								class="menu-arrow arrow_carrot-right"></span>
 						</a>
@@ -122,7 +77,36 @@
 									<a class="" th:href="@{/review}" th:if="${session.hpcUser.getUserRole()} == 'SYSTEM_ADMIN'">Review</a></li>
 							</ul>
 						</li>
-					</ul>
+					</ul></div>
+					<div class="pull-right"><ul class="nav navbar-nav">
+						<!-- user login dropdown start-->
+						<li class="nav-item" role="tab"><a data-toggle="dropdown"
+						class="dropdown-toggle" href="#"><i class="icon_profile"></i><span
+							class="username"
+							th:text="${session.hpcUser.firstName +' '+ session.hpcUser.lastName}"></span></a>
+						<ul class="dropdown-menu extended logout">
+							<div class="log-arrow-up"></div>
+							<li class="eborder-top"><a href="/profile"><i class="icon_profile"></i> My Profile</a></li>
+							<li><a href="/logout"><i class="icon_arrow_triangle_right_alt"></i> Log Out</a></li>
+						</ul></li>
+
+						<!--Users Guide-->
+						<li class="nav-item" role="tab"><a data-toggle="dropdown"
+							class="dropdown-toggle" href="#"><i class="icon_book_alt"></i><span
+							class="topNav-item">Help</span></a>
+							<ul class="dropdown-menu extended logout">
+								<div class="log-arrow-up"></div>
+								<li class="eborder-top"><a href="https://wiki.nci.nih.gov/display/DMEdoc" target="_blank"><i class="icon_book_alt"></i> User Guide</a></li>
+								<li><a href="https://github.com/CBIIT/HPC_DME_APIs" target="_blank"><i class="icon_key_alt"></i> DME Site on GitHub</a></li>
+							</ul>
+						</li>
+						<li class="nav-item versionNumber"><a href="">
+							<span th:if="${session.env == 'Local' or session.env == 'DEV' or session.env == 'UAT'}" th:text="'version: '+${session.version}+' ('+${session.env}+')'"></span>
+							<span th:if="${session.env == 'PROD'}" th:text="'version: '+${session.version}"></span>
+							</a>
+						</li>
+						<!-- user login dropdown end -->
+					</ul></div>
 					<!-- navbar menu end-->
 				</div>
 			</div>
