--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -277,21 +277,18 @@ body.loading .overlay{
     								</div>
     							</div>
 							</div>
-							<div class="col-md-1">&nbsp;</div>						
-						</div>
-						<div style="display: none" id="assaySummaryCheckbox" class="item">
-							<div class="col-md-1">
-								<input type="checkbox" th:field="${reportRequest.showArchiveSummary}" th:checked="${reportRequest.showArchiveSummary} ? 'checked'" />
-            					Assay Summary Checkbox
-							</div>
 						</div>
 						<div style="display: block" id="gen" class="item">
-							<div class="col-md-1">
+								<div style="display: none" class="col-md-2" id="assaySummaryCheckbox">
+									<input type="checkbox" th:field="${reportRequest.showArchiveSummary}" th:checked="${reportRequest.showArchiveSummary} ? 'checked'" />
+									Assay Summary Checkbox
+								</div>
+							<div class="col-md-2">
 								<label>&nbsp;</label>
 								<button type="submit" class="btn btn-md btn-primary"
 									id="primaryButton" onClick="return validateAndSubmit()">Generate</button>
 							</div>
-							<div class="col-md-4">&nbsp;</div>
+							<div class="col-md-1">&nbsp;</div>
 							<div id="spinner" class="overlay"></div>
 						</div>
 					</div> <!-- Second Row end -->
