--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -256,7 +256,7 @@ body.loading .overlay{
 					<!-- Second Row Begin -->
 					<div class="row">			
 						<div style="display: none" id="fromDateDiv" class="item">
-							<div class="col-md-2">
+							<div class="col-sm-2">
 								<label><b>From Date:</b></label>
 								<div class="input-group date" data-provide="datepicker">	
 	    							<input type="text" class="form-control" id="fromDate" name="fromDate" th:value="${reportRequest.getFromDate()}"/>
@@ -267,8 +267,8 @@ body.loading .overlay{
 							</div>
 						</div>						
 						<div style="display: none" id="toDateDiv" class="item">
-							<div class="col-md-1">&nbsp;</div>
-							<div class="col-md-2">
+							<div class="col-sm-1">&nbsp;</div>
+							<div class="col-sm-2">
 								<label><b>To Date:</b></label>						
 								<div class="input-group date" data-provide="datepicker">
     								<input type="text" class="form-control" id="toDate" name="toDate" th:value="${reportRequest.getToDate()}"/>
@@ -279,21 +279,22 @@ body.loading .overlay{
 							</div>
 						</div>
 						<div style="display: block" id="gen" class="item">
-								<div style="display: none" class="col-md-2" id="assaySummaryCheckbox">
-									<input type="checkbox" th:field="${reportRequest.showArchiveSummary}" th:checked="${reportRequest.showArchiveSummary} ? 'checked'" />
-									Assay Summary Checkbox
+								<div style="display: none" class="col-sm-1" id="assaySummaryCheckbox">
+									<label><b>Assay Summary:          </b></label>
+									&nbsp;&nbsp;<input type="checkbox" th:field="${reportRequest.showArchiveSummary}" th:checked="${reportRequest.showArchiveSummary} ? 'checked'" />
 								</div>
-							<div class="col-md-2">
+								<div class="col-sm-1">&nbsp;</div>
+							<div class="col-sm-2">
 								<label>&nbsp;</label>
 								<button type="submit" class="btn btn-md btn-primary"
 									id="primaryButton" onClick="return validateAndSubmit()">Generate</button>
 							</div>
-							<div class="col-md-1">&nbsp;</div>
+							<div class="col-sm-1">&nbsp;</div>
 							<div id="spinner" class="overlay"></div>
 						</div>
 					</div> <!-- Second Row end -->
 					<div class="row">
-						<div class="col-md-12">&nbsp;</div>
+						<div class="col-sm-12">&nbsp;</div>
 					</div>
 					<input type="hidden" id="actionType" name="actionType" />	 
 				</form>
@@ -788,6 +789,7 @@ body.loading .overlay{
 			assaySummaryCheckbox.style.display = "none";
 		} else {
 			assaySummaryCheckbox.style.display = "block";
+			assaySummaryCheckbox.checked = false;
 		}
 	  }
 
@@ -863,7 +865,14 @@ body.loading .overlay{
       		toDateEle.style.display = "none";
       		pathEle.style.display = "none";
       		basepathListEle.style.display = "block";
-			assaySummaryCheckboxEle.style.display = "none";
+			let basePathEle = document.getElementById("basepath").value;
+			if (basePathEle === null) {
+				assaySummaryCheckboxEle.style.display = "none";
+			} else if(basePathEle === "All") {
+				assaySummaryCheckboxEle.style.display = "none";
+			} else {
+				assaySummaryCheckboxEle.style.display = "block";
+			}
       	}
       	else if(selectedValue == "USAGE_SUMMARY_BY_BASEPATH_BY_DATE_RANGE")
       	{
@@ -873,8 +882,15 @@ body.loading .overlay{
       		fromDateEle.style.display = "block";
       		toDateEle.style.display = "block";
       		basepathListEle.style.display = "block";
-			assaySummaryCheckboxEle.style.display = "none";
-      	}
+			let basePathEle = document.getElementById("basepath").value;
+			if (basePathEle === null) {
+				assaySummaryCheckboxEle.style.display = "none";
+			} else if(basePathEle === "All") {
+				assaySummaryCheckboxEle.style.display = "none";
+			} else {
+				assaySummaryCheckboxEle.style.display = "block";
+			}
+        }
       	else if(selectedValue == "USAGE_SUMMARY_BY_PATH")
       	{
       		userListEle.style.display = "none";
