Change label for checkbox. Also make the checkbox optional for Summary Report

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -280,7 +280,7 @@ body.loading .overlay{
 						</div>
 						<div style="display: block" id="gen" class="item">
 							<div class="col-sm-2" id="assaySummaryCheckbox">
-								<label style="padding-left: 50px;"> <b>Assay Summary</b>
+								<label style="padding-left: 50px;"> <b>Archive Summary</b>
 									<input type="checkbox" id="assaySummaryCheckboxId" th:field="${reportRequest.showArchiveSummary}" th:checked="${reportRequest.showArchiveSummary} ? 'checked'" />
 								</label>
 							</div>
