--- a/src/hpc-web/src/main/resources/templates/dashboard.html
+++ b/src/hpc-web/src/main/resources/templates/dashboard.html
@@ -123,7 +123,7 @@
 							</div>
 							<!--panel-body start-->
 							<div class="panel-body">
-								<div id="grid1" ui-grid="gridOptions1" class="grid">
+								<div id="grid1" ui-grid="gridOptions1" class="grid" style="min-height: 175px;">
 									<div class="no-data" ng-hide="!searchesloading">
 										<div class="msg">
 											<i class="fa fa-spin fa-spinner"></i> <span>Loading
@@ -150,7 +150,7 @@
 							</div>
 							<!--panel-body start-->
 							<div class="panel-body">
-								<div id="grid2" ui-grid="gridOptions2" class="grid">
+								<div id="grid2" ui-grid="gridOptions2" class="grid"  style="min-height: 175px;">
 									<div class="no-data" ng-hide="!notificationsloading">
 										<div class="msg">
 											<i class="fa fa-spin fa-spinner"></i> <span>Loading
